--- a/src/pages/Reseller/beareseller.css
+++ b/src/pages/Reseller/beareseller.css
@@ -1,8 +1,25 @@
+li {
+    list-style: none;
+}
+
+fieldset {
+    border: none;
+}
+
+
 input {
     border: none;
 }
 
-.form__signup .card__input {
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0;
+    padding: 20px;
+}
+.card__input {
     border: #000 1px solid;
     width: 300px;
     height: 50px;
@@ -16,10 +33,15 @@ input {
 .card__input__radio {
     border: #000 1px solid;
     width: 300px;
-    height: 100px;
+    height: auto; /* Alterado para altura automática para acomodar melhor os elementos */
     display: flex;
     flex-direction: column;
     justify-content: center;
     padding-left: 15px;
     border-radius: 15px;
+}
+
+.card__input__radio div {
+    display: flex;
+    align-items: center; /* Adicionado para alinhar verticalmente o label e o input */
 }
