--- a/style.css
+++ b/style.css
@@ -52,7 +52,7 @@ nav{
    justify-content: center;
    color: white;
    align-items: baseline;
-   gap: 6%;border:
+   gap: 6%;
 }
 
 #search input{
