Resolvendo os espaçamentos na index

--- a/style.css
+++ b/style.css
@@ -1,6 +1,13 @@
-*{
-   box-sizing: 0%;
+* {
+   margin: 0;
+   padding: 0;
+   box-sizing: border-box;
+   font-family: 'Roboto Condensed', sans-serif;  
+   list-style: none;
+   border: none;
+   background: none;
    text-decoration: none;
+   color: inherit;
 }
 
 /* Possívis logo-cores:
