--- a/global.css
+++ b/global.css
@@ -1,138 +1,11 @@
-h1 {
-    color: pink;
-}
-
-li {
-    list-style: none;
-}
-
-fieldset {
-    border: none;
-}
-
-
 * {
-    box-sizing: border-box;
-}
-
-body {
     margin: 0;
-    padding: 20px;
-}
-
-nav{
-    display: flex;
-    align-items: center;
-    gap: 320px;
-}
-
-a {
-    text-decoration: none; 
-    border: none;
-}
-
-.logo{
-    width: 177px;
-    border-radius: 8px;
-    border: 1px solid black;
-}
-
-.container__search{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    margin-top: 20px;
-}
-
-input{
-    margin-left: 233px;
-    border-radius: 5px;
-    padding: 10px; 
-}
-
-.img__sorvetes{
-    width: 945px;
-    padding-top: 20px;
-}
-
-.products__presentation{
-    display: flex;
-    align-items: center; 
-    overflow-x: auto;            
-    padding-right: 15px; 
-}
-
-.ice__cream__product{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 10px;
-}
-
-.ice__cream__product img{
-    border: 1px solid black;
-}
-
-.more__information{
-    background-color: lightseagreen;
-    width: 100%;
-    padding: 10px 0 10px 0;
-    text-align: center;
-}
-
-.list__cart__produts{
-    display: flex;
     padding: 0;
-    margin: auto;
+    box-sizing: border-box;
+    font-family: 'Roboto Condensed', sans-serif;  
+    list-style: none;
+    border: none;
+    background: none;
+    text-decoration: none;
+    color: inherit;
 }
-
-.cart__products{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    width: 100%;
-    margin: 10px; 
-}
-
-.cart__img{
-    width: 187px;
-}
-
-.fig__img__people, .fig__img__message {
-    margin: 0;
-}
-
-.motivation__img{
-    display: block; 
-    width: 100%; 
-    height: auto; 
-    z-index: 0; 
-}
-
-.overlay {
-    position: relative; 
-    width: 100%; 
-    height: 100%; 
-    background-color: rgba(0, 0, 0, 0.5); 
-    z-index: 1; 
-}
-
-.img__message{
-    width: 100%;
-}
-
-.container__midias__sociais{
-    display: flex;
-    justify-content: space-between;
-}
-
-.list__midias__sociais{
-    display: flex;
-    align-items: center;
-    gap: 75px;
-    padding-right: 83px;
-}
-
-
-
