--- a/style.css
+++ b/style.css
@@ -25,15 +25,6 @@ header{
    margin-bottom: 20px;
 }
 
-nav{
-   height: 45px;
-   width: auto;
-   display: flex;
-   justify-content: end;
-   align-items: center;
-   gap: 36%;
-}
-
 #a-reseller{
    width: auto;
    height: auto;
@@ -58,7 +49,7 @@ nav{
 }
 
 #container__search{
-   height: 45px;
+   height: 100%;
    display: flex;
    align-items: center;
 }
