--- a/style.css
+++ b/style.css
@@ -77,6 +77,7 @@ header{
 
 #car-login .login {
    color: #fff;
+   cursor: pointer;
 }
 
 #car-login .carrinho {
@@ -186,11 +187,18 @@ main{
    margin: 0;
 }
 
-.cart__product button{
-   height: auto;
-   padding: 0;
-   margin: 0;
-}
+/* .add__car{
+   width: 80%;
+   height: 48px;
+   /* padding: 5px; 
+   margin-bottom: 3px;
+   border-radius: 20%;
+   background-color: #ac0121;
+   color: #fff;
+
+   border: solid 3px #f3ecec;
+} */
+
 /* Fim - Carrinho*/
 
 /* Início - Imagem motivacional*/
