:feat: alterada a frase motivacional.

--- a/style.css
+++ b/style.css
@@ -25,19 +25,19 @@ header{
    margin-bottom: 20px;
 }
 
-#a-reseller{
+/* #a-reseller{
    width: auto;
    height: auto;
    padding: 3%;
 
    font-size: small;
-}
+} */
 
-#a-reseller p{
+/* #a-reseller p{
    width: 100%;
    color: white;
    margin-left: 2%;
-}
+} */
 
 #a-logo {
    margin-left: 3%;
@@ -62,6 +62,20 @@ header{
    color: white;
    align-items: center;
    gap: 6%;
+}
+
+#btn__buscar{
+   width: 20px!important;
+   height: 22px;
+   background: url(http://www.devmedia.com.br/imagens/2013/buscar_grey.png) no-repeat;
+   cursor: pointer!important;
+   border: none;
+   transform: translateY(-50%);
+   padding: 0;
+   position: relative;
+   top: -35px;
+   left: 280px;
+   background-color: green;   
 }
 
 #car-login{
@@ -109,6 +123,7 @@ main{
    width: 100%;
 }
 
+/* Produto*/
 #section__products{  
    width: auto;
    display: flex;
