:feat: Criação da página 'sobre' e alteração do footer das páginas já criadas.

--- a/src/pages/login/login-style.css
+++ b/src/pages/login/login-style.css
@@ -121,10 +121,10 @@ footer{
    margin-top: 16%;
 }
 
-.descrition__about__sorvete__fitness {
+/* .descrition__about__sorvete__fitness {
    font-size: 14px;
    padding: 15px 0px;
-}
+} */
 
 #container__midias__sociais{
    height: auto;
