:feat: Criado o link para a página 'Sobre'.

--- a/style.css
+++ b/style.css
@@ -81,10 +81,15 @@ header{
 }
 
 #car-login{
-   width: 10%;
+   width: 17%;
    display: flex;
    justify-content: space-between;
    margin-right: 3%;
+}
+
+#sobre{
+   color: #fff;
+   font-size: 14px;
 }
 
 .fa{
