--- a/style.css
+++ b/style.css
@@ -138,7 +138,7 @@ main{
 }
 
 /* Início - Apresentação de produto*/
-#products__presentation{
+#products__presentation{   
    display: flex; 
    justify-content: center;  
    list-style-type: none;
@@ -147,6 +147,7 @@ main{
 }
 
 .ice__cream__product{
+   width: 25.1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
