:issue: Incluída a mensagem informando os campos obrigatórios na validação. Corrigida para a cor padrão a cor do campo 'senha' na tela de login.

--- a/src/pages/login/login-style.css
+++ b/src/pages/login/login-style.css
@@ -185,9 +185,9 @@ footer{
    display: block;
  }
 
-#lb_control_pwd{   
+/* #lb_control_pwd{   
    color: #ac0121;
-}
+} */
 
 #msg_required_field{
    padding-top: 3%;
